tests/parser/fail/illegal-octothorpe.som
"test:
fail-message:
  contains: '`#`'
"

IllegalOctothorpe = (
  run = (
    |v|
    v := #{}
  )
)
